Cargo fmt and workflow rename

--- a/misp-client/Cargo.toml
+++ b/misp-client/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 authors = ["Alain Krier <krial057@gmail.com>"]
 license = "MIT"
 description = "An unofficial client library to communicate with a MISP(https://www.misp-project.org/) server instance."
-homepage = "https://github.com/krial057/rs_misp"
-repository = "https://github.com/krial057/rs_misp"
+homepage = "https://github.com/krial057/thrust_intelligence"
+repository = "https://github.com/krial057/thrust_intelligence"
 readme = "README.md"
 edition = "2018"
 
